--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
 
 {{ partial "hooks/head-start.html" . }}
 
-<!-- ✅ 커스텀 스타일 강제 삽입 -->
+<!-- ✅ 강제로 head-end 불러오기 -->
 {{ partial "hooks/head-end/custom-style.html" . }}
 
 {{ partial "head.html" (dict "Page" . "theme" site.Params.theme) }}
